--- a/client/expressoh/package.json
+++ b/client/expressoh/package.json
@@ -7,13 +7,18 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "d3": "^4.6.0",
     "d3-scale": "^1.0.4",
     "d3-selection": "^1.0.3",
+    "flexboxgrid": "^6.3.1",
     "material-ui": "^0.17.0",
+    "package.json": "^2.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-flexbox-grid": "^0.10.2",
+    "react-tap-event-plugin": "^2.0.1",
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
